@@ -23,7 +23,6 @@ import java.io.UTFDataFormatException;
 import java.nio.ByteBuffer;
 import java.nio.channels.WritableByteChannel;
 
-import org.apache.cassandra.config.Config;
 import org.apache.cassandra.utils.memory.MemoryUtil;
 
 import com.google.common.base.Function;
@@ -38,6 +37,8 @@ import com.google.common.base.Function;
  */
 public abstract class UnbufferedDataOutputStreamPlus extends DataOutputStreamPlus
 {
+    private static final byte[] zeroBytes = new byte[2];
+
     protected UnbufferedDataOutputStreamPlus()
     {
         super();
@@ -253,6 +254,12 @@ public abstract class UnbufferedDataOutputStreamPlus extends DataOutputStreamPlu
     public static void writeUTF(String str, DataOutput out) throws IOException
     {
         int length = str.length();
+        if (length == 0)
+        {
+            out.write(zeroBytes);
+            return;
+        }
+
         int utfCount = 0;
         int maxSize = 2;
         for (int i = 0 ; i < length ; i++)
@@ -284,7 +291,6 @@ public abstract class UnbufferedDataOutputStreamPlus extends DataOutputStreamPlu
                 for (int i = firstIndex ; i < runLength; i++)
                     utfBytes[i] = (byte) str.charAt(offset + i);
                 out.write(utfBytes, 0, runLength);
-                offset += firstIndex;
                 firstIndex = 0;
             }
         }
